# dnsglobe

./: Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/workflows/: release.yml
demo/: demo.tape
plans/: 001-ci-gate.md  002-non-ascii-panic.md  003-hickory-026-upgrade.md  004-deletion-consensus.md  005-help-version-flags.md  README.md
src/: app.rs  dns.rs  main.rs  resolvers.rs  ui.rs
